# OOP_lab_2

./: BitString.cpp  BitString.h  CMakeLists.txt  main.cpp  test_BitString.cpp
